--- a/style.css
+++ b/style.css
@@ -89,6 +89,10 @@ body {
   display: none;
 }
 
+.navigations {
+  margin-left: 30rem;
+}
+
 .navigation_list {
   display: flex;
   gap: 2rem;
@@ -106,8 +110,8 @@ body {
 }
 
 .web_logo {
-  width: 14.9rem;
-  height: 15rem;
+  /* width: 14.9rem;
+  height: 4rem; */
   top: 5rem;
   left: 15rem;
 }
@@ -116,7 +120,7 @@ body {
   display: inline-block;
   width: 15rem;
   height: 4.5rem;
-  margin: 0;
+  margin-left: 25rem;
   font-size: 1.6rem;
   font-weight: 500;
   color: #0b132a;
@@ -140,7 +144,7 @@ body {
 .section {
   display: flex;
   align-items: center;
-  gap: calc(var(--defult_badding) * 4);
+  gap: var(--defult_badding);
   margin-top: calc(var(--defult_badding) * 4);
 }
 
@@ -518,6 +522,8 @@ span {
 
   .web_logo {
     margin-right: 2rem;
+    width: 10rem;
+    height: 3rem;
   }
 
   .login {
@@ -528,35 +534,35 @@ span {
     display: flex;
     flex-direction: column;
     cursor: pointer;
-    gap: 0.75rem;
+    gap: 0.5rem;
     position: absolute;
     left: 29rem;
     top: 2.5rem;
   }
   .burger__menu__bar {
     height: 0.3rem;
-    width: 4.375rem;
+    width: 3.375rem;
     background-color: var(--color-text);
     transition: var(--transition);
     z-index: 0;
   }
   .header:has(.burger__menu:checked) .burger__menu__bar:nth-child(1) {
-    transform: translateY(10px) rotate(45deg);
+    transform: translateY(10px) rotate(40deg);
   }
   .header:has(.burger__menu:checked) .burger__menu__bar:nth-child(2) {
     opacity: 0;
     visibility: hidden;
   }
   .header:has(.burger__menu:checked) .burger__menu__bar:nth-child(3) {
-    transform: translateY(-10px) rotate(-40deg);
+    transform: translateY(-6px) rotate(-40deg);
   }
 
   .navigations {
     position: absolute;
-    /* width: 100vw; */
-    background-color: red;
+    top: 5%;
+    /* width: 100%; */
+    background-color: #ffffff;
     margin: 2rem 0;
-    top: 0;
     padding: 1rem;
     z-index: -1;
     max-width: 100%;
@@ -566,7 +572,7 @@ span {
     gap: 7px;
   }
 
-  .burger__menu:checked + .navigations {
+  .burger__menu:checked ~ .navigations {
     top: 100%;
   }
 
@@ -576,19 +582,23 @@ span {
     display: flex;
     flex-direction: column;
     align-items: start;
+    margin-top: var(--defult_badding);
+    gap: var(--defult_badding);
   }
   .title {
-    font-size: 3rem;
+    font-size: 2rem;
     line-height: 3rem;
   }
 
   .imgcontent {
     order: -1;
+    margin-left: 3rem;
+    margin-top: 7rem;
   }
 
   .section__img {
-    width: 35rem;
-    height: 25rem;
+    width: 30rem;
+    height: 20rem;
   }
 
   .section__details {
@@ -597,24 +607,24 @@ span {
 
   .button {
     margin-left: 5rem;
+    width: 14rem;
   }
 
   .main {
-    /* position: absolute; */
-    flex-direction: column;
-    margin: 2rem;
+    margin: 4rem;
     padding: 1rem;
     width: 35rem;
+    gap: 2rem;
   }
 
   .component {
     display: grid;
+    grid-template-columns: 1fr 3fr;
 
     &:nth-child(1) {
       padding: 0;
       border-right: none;
       border-bottom: 0.3rem solid #eeeff2;
-      margin: 4rem;
     }
 
     &:nth-child(2) {
@@ -625,21 +635,47 @@ span {
       padding: 0;
       border-left: none;
       border-bottom: 0.3rem solid #eeeff2;
-      margin: 4rem;
+      
     }
   }
 
-  .img__content {
-    margin-left: 0;
+  .component__title {
+    font-size: 1rem;
+    font-weight: 700;
+   
   }
 
-  .section__img {
-    width: 35rem;
-    height: 25rem;
+  .component__description {
+    font-size: 1rem;
+    color: #4f5665;
+    font-weight: 400;
+    padding-bottom: 1rem;
+  }
+
+  .img__icon {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .img__content {
+    margin-left: 4rem;
+  }
+
+  .section__img__two {
+    width: 27rem;
+    height: 22rem;
+  }
+
+  .title__three {
+    font-size: 1.8rem;
+  }
+
+  .description {
+    font-size: 1.5rem;
   }
 
   .title__content {
-    font-size: 3rem;
+    font-size: 2rem;
     line-height: 3rem;
     width: 35rem;
     margin-left: 1rem;
@@ -658,13 +694,15 @@ span {
   }
 
   .huge__global--img {
-    width: 35rem;
-    height: 25rem;
+    width: 25rem;
+    height: 15rem;
+    margin-left: 5rem;
   }
 
   .sponsored__img {
-    width: 35rem;
-    height: 25rem;
+    width: 25rem;
+    height: 15rem;
+    margin-left: 5rem;
   }
 
   .reviow__box {
@@ -672,51 +710,95 @@ span {
     width: 35rem;
   }
 
-  .img__left__section {
-    top: 2rem;
+  .title__five {
+    font-size: 1rem;
   }
 
-  .img__right {
-    margin-left: 25rem;
-    top: -2rem;
-    width: 10rem;
-    height: 10rem;
+  .country {
+    font-size: 0.8rem;
   }
 
-  .img__left {
-    margin-left: 23rem;
-    top: 0.3rem;
+  .box__img {
     width: 4rem;
     height: 4rem;
   }
+
+  .rate {
+    margin-top: 0.5rem;
+    margin-left: 10rem;
+  }
+
+  .star {
+    margin-top: 0.5rem;
+  }
+
+  .reviow__content {
+    font-size: 1.2rem;
+  }
+
+  .img__left__section {
+    top: 2rem;
+    width: 8rem;
+    left: 2rem;
+  }
+
+  .img__right {
+    margin-left: 28rem;
+    top: -1rem;
+    width: 7rem;
+    height: 7rem;
+  }
+
+  .img__left {
+    margin-left: 26rem;
+    top: 0.3rem;
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .main:nth-child(1) {
+    margin-left: 0;
+    margin-top: 6rem;
+  }
+
   .component1 {
     grid-template-rows: repeat(2, auto);
     grid-template-columns: 1fr;
     position: relative;
     width: 35rem;
-    gap: 10rem;
+    gap: 3rem;
+    margin-top: 2rem;
   }
 
   .button1 {
-    position: absolute;
-    top: 17rem;
-    left: 4rem;
-  }
-
-  .main:nth-of-type(1) {
-    margin-left: 0;
+    position: inherit;
+    top: -3rem;
+    left: 9rem;
+    width: 16rem;
   }
 
   .title1 {
     text-align: center;
     align-self: flex-start;
+    font-size: 2rem;
+    
   }
 
+  .footer {
+    margin-top: 5rem;
+    margin-left: 1rem;
+  }
   .description1 {
     text-align: center;
   }
 
   .columns {
-    grid-template-columns: repeat(1, auto);
+    display: grid;
+    grid-auto-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(2, auto);
+    gap: 2rem;
+  }
+  .copyright {
+    display: none;
   }
 }
